docs/_evidence/ce05_m2_shot_binding_20260104_163754/trigger_output.txt
/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: ⨯ Unable to compile TypeScript:
apps/api/src/dev/ce05_m2_trigger.ts(71,17): error TS2353: Object literal may only specify known properties, and 'status' does not exist in type 'Without<NovelSourceCreateInput, NovelSourceUncheckedCreateInput> & NovelSourceUncheckedCreateInput'.

    at createTSError (/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1617:30)
    at node:internal/modules/cjs/loader:1824:10
    at Object.require.extensions.<computed> [as .ts] (/Users/adam/Desktop/adam/毛毛虫宇宙/Super Caterpillar/node_modules/.pnpm/ts-node@10.9.2_@swc+core@1.15.5_@types+node@20.19.25_typescript@5.9.3/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1427:32)
    at Module._load (node:internal/modules/cjs/loader:1250:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14) {
  diagnosticCodes: [ 2353 ]
}
